MDEV-8576: Bootstrap should ignore --enforce-storage-engine option

Allow enforce-storage-engine="" option and use that on mysql_install_db
when doing bootstrap.